# sylvan_library

./: .bowerrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  Pipfile  README.md  bower.json  pyproject.toml  requirements-dev.txt  requirements.txt  sylvan_library.ipynb
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: App.js
sylvan-react/: package-lock.json  package.json  vite.config.ts
sylvan-react/app/: App.tsx  index.tsx
sylvan-react/app/components/: Decks.tsx  Layout.tsx  Pager.tsx  Search.tsx  SetList.tsx  TopBar.tsx
sylvan-react/app/styles/: app.css  pager.css  top-bar.css
sylvan-react/app/welcome/: welcome.tsx
sylvan_library/: .project  .pydevproject  Untitled.ipynb  cardchanges.txt  import_from_delverdb.bat  manage.py  settings.py  usercards.txt
sylvan_library/api/: serializers.py  urls.py  views.py
sylvan_library/api/api/: settings.py
sylvan_library/bitfield/: __init__.py  admin.py  apps.py  forms.py  models.py  query.py  types.py
sylvan_library/bitfield/tests/: forms.py  models.py  tests.py
sylvan_library/cards/: admin.py  apps.py  colour.py  fields.py  models.py  serializers.py  tests.py  urls.py  views.py  widgets.py
sylvan_library/cards/fixtures/: colours.json
sylvan_library/cards/migrations/: 0001_initial.py  0002_auto_20201128_2039.py  0002_card_image_overhaul.py  0002_set_border_color.py  0003_auto_20201205_1440.py  0003_cardprinting_json_id.py  0003_move_scryfall_illustration_id.py  (+139 more)
sylvan_library/cardsearch/: admin.py  apps.py  base_search.py  calc_parser.py  card_search.py  cardsearch.py  colours.py  fieldsearch.py  models.py  namesearch.py  parameters.py  parse_search.py  parser.py  query_parser.py  search_metadata.py  search_result.py  serializers.py  simplesearch.py  sort_key.py  tests.py  urls.py  views.py
sylvan_library/conf/: .env.sample  settings.py  urls.py  wsgi.py
sylvan_library/data_export/: apps.py
sylvan_library/data_import/: _paths.py  _query.py  admin.py  apps.py  importers.py  models.py  staging.py  tests.py
sylvan_library/frontend/: apps.py  package-lock.json  package.json  urls.py  views.py  webpack.config.js
sylvan_library/reports/: apps.py
sylvan_library/settings/: base.py  local.py  production.py  secrets_empty.json
sylvan_library/spellbook/: apps.py  colour.py  models.py  urls.py  views.py
sylvan_library/sylvan_library/: .env.sample  settings.py  urls.py  wsgi.py
sylvan_library/website/: apps.py  forms.py  pagination.py  tests.py  urls.py  views.py
(+292 files in other folders)
