[tool.poetry]
name = "sylvan-library"
version = "0.1.0"
description = ""
authors = ["marshl <marshl@live.com.au>"]
readme = "README.md"
packages = [{include = "sylvan_library"}]

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.2.3"
django = ">4.2,<5"
django-environ = "^0.10.0"
django-extensions = "^3.2.3"
django-select2 = "^8.1.2"
django-tinymce = "^3.6.1"
django-widget-tweaks = "^1.4.12"
djangorestframework = "^3.14.0"
ijson = "^3.2.2"
psycopg2 = "^2.9.6"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.2"
black = "^23.7.0"
django-debug-toolbar = "^4.1.0"
pylint = "^2.17.4"
pylint-django = "^2.5.3"
seaborn = "^0.12.2"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
