[tool.poetry]
name = "sylvan-library"
version = "0.1.0"
description = ""
authors = ["marshl <marshl@live.com.au>"]
readme = "README.md"
packages = [{include = "sylvan_library"}]

[tool.poetry.dependencies]
python = "3.10.*"
arrow = ">1,<2"
django = ">4.2,<5"
django-environ = ">=0.10,<1"
django-extensions = ">3,<4"
django-select2 = ">8,<9"
django-tinymce = ">3,<4"
django-widget-tweaks = ">1,<2"
djangorestframework = ">3,<4"
ijson = ">3,<4"
psycopg2 = ">2.9,<2.10"
requests = ">2,<3"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = ">4,<5"
black = ">23,<24"
django-debug-toolbar = ">4,<5"
pylint = ">2,<3"
pylint-django = ">2,<3"
pre-commit = ">3,<4"
scipy = ">1,<2"
seaborn = ">0.12,<1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
